# dragonfly-reporter

./: .dockerignore  .pre-commit-config.yaml  Containerfile  Dockerfile  LICENSE.txt  README.md  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: image-build-push.yaml  lint-test.yaml
src/dragonfly_reporter/: __main__.py  app.py  constants.py  http_client.py  mailer.py  models.py  observations.py  report.py
src/dragonfly_reporter/dependencies/: __init__.py  microsoft_graph_dependencies.py
src/reporter/: __init__.py  __main__.py  app.py  constants.py  http_client.py  mailer.py  models.py  observations.py  pypi_client.py  schemas.py
src/reporter/dependencies/: microsoft_graph_dependencies.py
src/reporter/utils/: pypi.py
tests/: conftest.py  test_report.py
