[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dragonfly-reporter"
version = "0.1.0"
description = "Reports malicious packages to PyPI."
authors = [{name = "Vipyr Security Developers", email = "support@vipyrsec.com"}]
license = {text = "MIT"}
classifiers = ["Private :: Do Not Upload"]

requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi-slim==0.118.0",
  "httpx==0.28.1",
  "pydantic-settings==2.11.0",
  "sentry-sdk==2.39.0",
  "uvicorn[standard]==0.37.0",
]

  [project.urls]
  homepage = "https://vipyrsec.com/"
  source = "https://github.com/vipyrsec/dragonfly-reporter.git"
  issues = "https://github.com/vipyrsec/dragonfly-reporter/issues"

[dependency-groups]
dev = ["pre-commit", "pyright", "ruff"]
test = ["coverage", "pytest"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.hatch.build.targets.wheel]
packages = ["src/reporter"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py312"

  [tool.ruff.lint]
  select = ["ALL"]

  ignore = [
    "FIX",   # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
    "G004",  # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "N818",  # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "S101",  # https://docs.astral.sh/ruff/rules/assert/
    "TC001", # https://docs.astral.sh/ruff/rules/typing-only-first-party-import/
    "TC002", # https://docs.astral.sh/ruff/rules/typing-only-third-party-import/
    "TC003", # https://docs.astral.sh/ruff/rules/typing-only-standard-library-import/
    "TD002", # https://docs.astral.sh/ruff/rules/missing-todo-author/
    "TD003", # https://docs.astral.sh/ruff/rules/missing-todo-link/

    # Conflicting rules with format (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
  ]

    [tool.ruff.lint.isort]
    known-first-party = ["reporter", "logging_config"]

    [tool.ruff.lint.per-file-ignores]
    "tests/*" = [
      "ANN",
      "D",
      "INP",
      "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
      "S105",    # https://docs.astral.sh/ruff/rules/hardcoded-password-string/
      "S106",    # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg/
      "S107",    # https://docs.astral.sh/ruff/rules/hardcoded-password-default/
    ]

    [tool.ruff.lint.pydocstyle]
    convention = "google"

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"
# deprecateTypingAliases = true
# reportCallInDefaultInitializer = "error"
# reportImplicitOverride = "error"
# reportImplicitStringConcatenation = "error"
# reportImportCycles = "error"
# reportMissingSuperCall = "error"
# reportPropertyTypeMismatch = "error"
# reportShadowedImports = "error"
# reportUninitializedInstanceVariable = "error"
# reportUnnecessaryTypeIgnoreComment = "error"
# reportUnusedCallResult = "error"

[tool.coverage.run]
branch = false
source = ["src/reporter/"]

[tool.coverage.report]
fail_under = 100
